async upload completion almost there
