# api/specs/storage/openapi.yaml
@@ -272,9 +272,40 @@ paths:
         default:
           $ref: "#/components/responses/DefaultErrorResponse"
 
+  /locations/{location_id}/files/{file_id}:complete/futures/{future_id}:
+    post:
+      summary: Check for upload completion
+      operationId: is_completed_upload_file
+      parameters:
+        - name: future_id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: file_id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: location_id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: user_id
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: returns state of upload completion
+        default:
+          $ref: "#/components/responses/DefaultErrorResponse"
+
   /locations/{location_id}/files/{file_id}:complete:
     post:
-      summary: Signify that upload was completed
+      summary: Asks the server to complete the upload
       operationId: complete_upload_file
       parameters:
         - name: file_id
@@ -315,8 +346,8 @@ paths:
                         type: string
 
       responses:
-        "204":
-          description: Success
+        "202":
+          description: Completion of upload is accepted
         default:
           $ref: "#/components/responses/DefaultErrorResponse"
 
