# services/storage/src/simcore_service_storage/handlers.py
@@ -25,13 +25,15 @@ from .access_layer import InvalidFileIdentifier
 from .constants import APP_DSM_KEY, DATCORE_STR, SIMCORE_S3_ID, SIMCORE_S3_STR
 from .db_tokens import get_api_token_and_secret
 from .dsm import DataStorageManager, DatCoreApiToken, LinkType, UploadLinks
-from .models import FileMetaDataEx
+from .models import FileID, FileMetaDataEx
 from .s3_client import UploadedPart
 from .settings import Settings
 
 log = logging.getLogger(__name__)
 
 routes = RouteTableDef()
+
+UPLOAD_TASKS_KEY = f"{__name__}.upload_tasks"
 
 
 async def _prepare_storage_manager(
@@ -205,7 +207,10 @@ async def get_files_metadata_dataset(request: web.Request):
         return {"error": None, "data": data_as_dict}
 
 
-@routes.get(f"/{api_vtag}/locations/{{location_id}}/files/{{file_id}}/metadata")  # type: ignore
+@routes.get(
+    f"/{api_vtag}/locations/{{location_id}}/files/{{file_id}}/metadata",
+    name="get_file_metadata",
+)  # type: ignore
 async def get_file_metadata(request: web.Request):
     params, query, body = await extract_and_validate(request)
 
@@ -390,6 +395,10 @@ async def upload_file(request: web.Request):
     return {"data": json.loads(response.json(by_alias=True))}
 
 
+def _create_upload_completion_task_name(user_id: UserID, file_id: FileID) -> str:
+    return f"upload_complete_task_{user_id}_{urllib.parse.quote(file_id, safe='')}"
+
+
 @routes.post(f"/{api_vtag}/locations/{{location_id}}/files/{{file_id}}:complete")  # type: ignore
 async def complete_upload_file(request: web.Request):
     params, query, body = await extract_and_validate(request)
@@ -398,25 +407,75 @@ async def complete_upload_file(request: web.Request):
     )
     assert params, f"{params}"  # nosec
     assert "file_id" in params  # nosec
-    params["file_id"] = urllib.parse.unquote(params["file_id"])
+    assert "location_id" in params  # nosec
     assert query, f"{query}"  # nosec
     body = await request.json()
     assert body  # nosec
 
     with handle_storage_errors():
         user_id = query["user_id"]
-        file_uuid = params["file_id"]
+        file_id = urllib.parse.unquote(params["file_id"])
         parts = body.get("parts", {})
         if not parts:
             raise web.HTTPUnprocessableEntity(reason="missing parts to complete upload")
         parts = parse_obj_as(list[UploadedPart], parts)
 
         dsm = await _prepare_storage_manager(params, query, request)
+        # NOTE: completing a multipart upload on AWS can take up to several minutes
+        # therefore we wait a bit to see if it completes fast and return a 204
+        # if it returns slow we return a 202 - Accepted, the client will have to check later
+        # for completeness
 
-        await dsm.complete_upload(
-            file_uuid=file_uuid, user_id=user_id, uploaded_parts=parts
+        # TODO: check BacgroundTask in fastapi
+        task = asyncio.create_task(
+            dsm.complete_upload(
+                file_uuid=file_id, user_id=user_id, uploaded_parts=parts
+            ),
+            name=_create_upload_completion_task_name(user_id, file_id),
         )
-        return web.HTTPNoContent(content_type="application/json")
+        request.app[UPLOAD_TASKS_KEY][task.get_name()] = task
+        complete_task_state_url = request.url.join(
+            request.app.router["is_completed_upload_file"].url_for(
+                location_id=params["location_id"],
+                file_id=params["file_id"],
+                future_id=task.get_name(),
+            )
+        )
+        return web.json_response(
+            status=web.HTTPAccepted.status_code,
+            headers={"Content-Location": f"{complete_task_state_url}"},
+            data={"data": {"links": {"state": f"{complete_task_state_url}"}}},
+        )
+
+
+@routes.post(f"/{api_vtag}/locations/{{location_id}}/files/{{file_id}}:complete/futures/{{future_id}}", name="is_completed_upload_file")  # type: ignore
+async def is_completed_upload_file(request: web.Request):
+    params, query, body = await extract_and_validate(request)
+    log.debug(
+        "received call to complete upload_file with %s", f"{params=}, {query=}, {body=}"
+    )
+    assert params, f"{params}"  # nosec
+    assert query, f"{query}"  # nosec
+    assert not body  # nosec
+    with handle_storage_errors():
+        # NOTE: completing a multipart upload on AWS can take up to several minutes
+        # therefore we wait a bit to see if it completes fast and return a 204
+        # if it returns slow we return a 202 - Accepted, the client will have to check later
+        # for completeness
+        user_id = query["user_id"]
+        file_id = urllib.parse.unquote(params["file_id"])
+        task_name = _create_upload_completion_task_name(user_id, file_id)
+        assert task_name == params["future_id"]  # nosec
+        # first check if the task is in the app
+        if task := request.app[UPLOAD_TASKS_KEY].get(task_name):
+            if task.done():
+                task.result()
+                request.app[UPLOAD_TASKS_KEY].pop(task_name)
+                return web.json_response(status=web.HTTPOk.status_code, data="ok")
+            # the task is still running
+            return web.json_response(status=web.HTTPOk.status_code, data="not_ready")
+        # there is no task, so storage was restarted in between?
+        # TODO: what do we do here???
 
 
 @routes.delete(f"/{api_vtag}/locations/{{location_id}}/files/{{file_id}}")  # type: ignore
